# llama-cpp

./: .gitignore  .npmignore  API_DOCUMENTATION.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_SUMMARY.md  LlamaCpp.podspec  PUBLICATION_GUIDE.md  PUBLISH_GUIDE.md  Package.swift  QUICK_REFERENCE.md  README.md  TESTING.md  X86_64_BUILD_README.md  arusatech-llama-cpp-0.0.1.tgz  build-complete-arm64.sh  build-complete-x86_64.sh  build-native.sh  capacitor.config.ts  example.ts  llama-cpp-capacitor-0.0.1.tgz  llama-cpp-capacitor-0.0.13.tgz  llama-cpp-capacitor-0.0.2.tgz  llama-cpp-capacitor-0.0.3.tgz  llama-cpp-capacitor-0.0.4.tgz  llama-cpp-capacitor-0.0.5.tgz  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
android/: build.gradle
android/src/main/: CMakeLists-arm64.txt  CMakeLists-x86_64.txt  CMakeLists.txt  jni-utils.h  jni.cpp
android/src/main/java/ai/annadata/plugin/capacitor/: LlamaCpp.java  LlamaCppPlugin.java
cpp/: cap-completion.cpp  cap-completion.h  cap-llama.cpp  cap-llama.h  cap-mtmd.hpp  cap-tts.cpp  cap-tts.h
ios/: CMakeLists-x86_64.txt  CMakeLists.txt
ios/Sources/LlamaCppPlugin/: LlamaCpp.swift  LlamaCppPlugin.swift
ios/Tests/LlamaCppPluginTests/: LlamaCppPluginTests.swift
scripts/: test-integration.sh
src/: definitions.ts  index.ts  web.ts
test/: jest.integration.config.js
test/integration/: llama-cpp.test.ts  setup.ts  test-runner.ts
test/output/reports/: integration-test-report-20250829-174416.md
types/: llama-cpp-capacitor.d.ts
